--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -108,6 +108,9 @@
         font-weight: 500;
         line-height: 1;
         text-transform: none;
+        padding-top: 12px;
+        line-height: 1.2;
+
         color: $lochmara;
 
         &.like {
