--- a/sass/components/_thankyou.scss
+++ b/sass/components/_thankyou.scss
@@ -19,12 +19,10 @@
 }
 
 .button-distance-area{
-        margin-bottom: 8px !important;
+    margin-bottom: 8px !important;
 }
 
 .dislike {
-    padding-top: 12px;
-
     @include aftersocialbutton;
 
     &:hover {
@@ -35,10 +33,6 @@
 }
 
 .like {
-    line-height: 1.6 !important;
-    padding-top: 12px;
-    margin-top: -4px;
-
     @include aftersocialbutton;
 }
 
@@ -60,7 +54,7 @@
     }
 
     p {
-        margin: 17px 0 30px 0px;
+        margin: 17px 0 30px 0;
     }
 
     .text-info {
